feat: add header

--- a/index.html
+++ b/index.html
@@ -14,8 +14,18 @@
 <body>
 
     <!-- Header -->
-    <header>
-        <div class="header-bar"></div>
+    <header class="bg-sky ht-60 flex">
+        <div class="header-bar flex bg-yellow ht-30">
+            <img id="logo" src="." alt="logo">
+            <nav class="nav-header dsp-inbl">
+                <a href=".">link</a>
+                <a href=".">link</a>
+                <a href=".">link</a>
+                <a href=".">link</a>
+                <a href=".">link</a>
+            </nav>
+            <img id="logo" src="." alt="logo">
+        </div>
     </header>
     <!-- End-Header -->
 
@@ -33,11 +43,11 @@
     <!-- End-Main -->
 
     <!-- Footer -->
-     <footer>
+    <footer>
         <div class="main-footer"></div>
         <div class="footer-bar"></div>
-     </footer>
-     <!-- End-Footer -->
+    </footer>
+    <!-- End-Footer -->
 
 </body>
 
