--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     <!-- End-Header -->
 
     <!-- Hero -->
-    <div class="hero"></div>
+    <div class="hero flex bg-blue ht-400">
+        <div class="hero-content flex bg-pink"></div>
+    </div>
     <!-- End-Hero -->
 
     <!-- Main -->
