feat: add main, wip

--- a/index.html
+++ b/index.html
@@ -24,28 +24,40 @@
                 <a href=".">link</a>
                 <a href=".">link</a>
             </nav>
-            <img id="logo" src="." alt="logo">
+            <img class="logo" src="." alt="logo">
         </div>
     </header>
     <!-- End-Header -->
 
     <!-- Hero -->
-    <div class="hero flex bg-blue ht-400">
+    <div class="hero flex bg-blue ht-350">
         <div class="hero-content flex bg-pink"></div>
     </div>
     <!-- End-Hero -->
 
     <!-- Main -->
-    <main class="container">
-        <div class="up-container"></div>
-        <div class="mid-container"></div>
-        <div class="down-container"></div>
-        <div class="end-container"></div>
+    <main class="main-container">
+
+        <div class="main-box flex ht-450">
+            <div class="box-content ht-350 bg-lt-blue"></div>
+            <div class="box-content-rx ht-350 bg-salmon"></div>
+        </div>
+
+        <div class="main-container flex ht-450 bg-grey">
+            <div class="main-box flex-reverse ht-450 bg-grey">
+                <div class="box-content ht-350 bg-lt-blue"></div>
+                <div class="box-content-rx ht-350 bg-salmon"></div>
+            </div>
+
+        </div>
+
+        <div class="down-container flex ht-450"></div>
+        <div class="end-container flex ht-600 bg-grey"></div>
     </main>
     <!-- End-Main -->
 
     <!-- Footer -->
-    <footer>
+    <footer class="bg-black ht-500">
         <div class="main-footer"></div>
         <div class="footer-bar"></div>
     </footer>
