feat: adjust box main

--- a/index.html
+++ b/index.html
@@ -38,21 +38,32 @@
     <!-- Main -->
     <main class="main-container">
 
-        <div class="main-box flex ht-450">
-            <div class="box-content ht-350 bg-lt-blue"></div>
-            <div class="box-content-rx ht-350 bg-salmon"></div>
-        </div>
-
-        <div class="main-container flex ht-450 bg-grey">
-            <div class="main-box flex-reverse ht-450 bg-grey">
+        <!-- Up-Box -->
+        <div class="container flex ht-450">
+            <div class="main-box flex ht-450">
                 <div class="box-content ht-350 bg-lt-blue"></div>
                 <div class="box-content-rx ht-350 bg-salmon"></div>
             </div>
+        </div>
+        <!-- End-Up-Box -->
 
+        <div class="container flex ht-450 bg-grey">
+            <div class="main-box flex-reverse ht-450">
+                <div class="box-content ht-350 bg-lt-blue"></div>
+                <div class="box-content-rx ht-350 bg-salmon"></div>
+            </div>
         </div>
 
-        <div class="down-container flex ht-450"></div>
-        <div class="end-container flex ht-600 bg-grey"></div>
+        <div class="container flex ht-450">
+            <div class="main-box flex ht-450">
+                <div class="box-content ht-350 bg-lt-blue"></div>
+                <div class="box-content-rx ht-350 bg-salmon"></div>
+            </div>
+        </div>
+
+        <div class="end-container flex ht-600 bg-grey">
+
+        </div>
     </main>
     <!-- End-Main -->
 
