feat: end main.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <main class="main-container">
 
         <!-- Up-Box -->
-        <div class="container flex ht-450">
+        <div class="container flex ht-450 bg-white">
             <div class="main-box flex ht-450">
                 <div class="box-content ht-350 bg-lt-blue"></div>
                 <div class="box-content-rx ht-350 bg-salmon"></div>
@@ -54,14 +54,15 @@
             </div>
         </div>
 
-        <div class="container flex ht-450">
+        <div class="container flex ht-450 bg-white">
             <div class="main-box flex ht-450">
                 <div class="box-content ht-350 bg-lt-blue"></div>
                 <div class="box-content-rx ht-350 bg-salmon"></div>
             </div>
         </div>
 
-        <div class="end-container flex ht-600 bg-grey">
+        <div class="container flex ht-700 bg-grey">
+            <div class="end-box bg-green"></div>
 
         </div>
     </main>
