feat: wip footer.

--- a/index.html
+++ b/index.html
@@ -69,8 +69,18 @@
     <!-- End-Main -->
 
     <!-- Footer -->
-    <footer class="bg-black ht-500">
-        <div class="main-footer"></div>
+    <footer class="container bg-black ht-500">
+        <div class="main-footer flex">
+            <div class="box-foot bg-peach ht-350">
+            </div>
+        
+        <div class="box-nav ht-350 flex">
+            <div class="box-nav-li bg-lt-green"></div>
+            <div class="box-nav-li bg-lt-green"></div>
+            <div class="box-nav-li bg-lt-green"></div>
+            <div class="box-nav-li bg-lt-green"></div>
+        </div>
+    </div>
         <div class="footer-bar"></div>
     </footer>
     <!-- End-Footer -->
