feat: stopping work wip project.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
             <div class="box-nav-li bg-lt-green"></div>
         </div>
     </div>
-        <div class="footer-bar"></div>
+        <div class="foot-cont flex ht-60">
+            <div class="footer-bar flex bg-acqua">
+                <img class="logo" src="." alt="logo">
+                <button>bottone</button>
+            </div>
+            
+        </div>
     </footer>
     <!-- End-Footer -->
 
